--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mastering Typescript</title>
   <script src="app.js" defer></script>
-  <script src="./src/user.ts" defer></script>
+  <script src="./dist/user.js" defer></script>
 </head>
 
 <body>
   <h1>test</h1>
+  <p id="message-content"></p>
+  <input type="text" id="input-username">
 </body>
 
 </html>
