--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mastering Typescript</title>
-  <script src="app.js" defer></script>
-  <script src="./dist/user.js" defer></script>
+  <script src="./dist/app.js" defer></script>
+  <!-- <script src="./dist/user.js" defer></script> -->
 </head>
 
 <body>
+  <div id="title"></div>
   <h1>test</h1>
   <p id="message-content"></p>
   <input type="text" id="input-username">
