--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mastering Typescript</title>
-  <script src="./dist/app.js" defer></script>
+  <!-- <script src="./dist/app.js" defer></script> -->
+  <script src="./dist/decorator-class.js" defer></script>
   <!-- <script src="./dist/user.js" defer></script> -->
 </head>
 
