--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mastering Typescript</title>
   <!-- <script src="./dist/app.js" defer></script> -->
-  <script src="./dist/decorator-class.js" defer></script>
-  <!-- <script src="./dist/user.js" defer></script> -->
+  <!-- <script src="./dist/decorator-class.js" defer></script> -->
+  <script src="./dist/decorator-another.js" defer></script>
 </head>
 
 <body>
@@ -16,6 +16,7 @@
   <h1>test</h1>
   <p id="message-content"></p>
   <input type="text" id="input-username">
+  <button>Click Me</button>
 </body>
 
 </html>
