--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mastering Typescript</title>
-  <!-- <script src="./dist/app.js" defer></script> -->
+  <script src="./dist/app.js" defer></script>
   <!-- <script src="./dist/decorator-class.js" defer></script> -->
-  <script src="./dist/decorator-another.js" defer></script>
+  <!-- <script src="./dist/decorator-another.js" defer></script> -->
 </head>
 
 <body>
@@ -17,6 +17,13 @@
   <p id="message-content"></p>
   <input type="text" id="input-username">
   <button>Click Me</button>
+  <br>
+  <br>
+  <form>
+    <input type="text" placeholder="Course Title">
+    <input type="number" placeholder="Course Price">
+    <button type="submit">SUBMIT</button>
+  </form>
 </body>
 
 </html>
