--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <br>
   <br>
   <form>
-    <input type="text" placeholder="Course Title">
-    <input type="number" placeholder="Course Price">
+    <input type="text" placeholder="Course Title" id="coursetitle">
+    <input type="number" placeholder="Course Price" id="price">
     <button type="submit">SUBMIT</button>
   </form>
 </body>
