--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="./dist/app.js" defer></script>
   <!-- <script src="./dist/decorator-class.js" defer></script> -->
   <!-- <script src="./dist/decorator-another.js" defer></script> -->
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
@@ -23,6 +24,11 @@
     <input type="text" placeholder="Course Title" id="coursetitle">
     <input type="number" placeholder="Course Price" id="price">
     <button type="submit">SUBMIT</button>
+    <select name="" id="">
+      <option value="asd">asdasd</option>
+      <option value="asd">asdasd</option>
+      <option value="asd">asdasd</option>
+    </select>
   </form>
 </body>
 
