--- a/index.html
+++ b/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mastering Typescript</title>
-  <script src="./dist/app.js" defer></script>
-  <!-- <script src="./dist/decorator-class.js" defer></script> -->
-  <!-- <script src="./dist/decorator-another.js" defer></script> -->
-  <link rel="stylesheet" href="./index.css">
-</head>
-
-<body>
-  <div id="title"></div>
-  <h1>test</h1>
-  <p id="message-content"></p>
-  <input type="text" id="input-username">
-  <button>Click Me</button>
-  <br>
-  <br>
-  <form>
-    <input type="text" placeholder="Course Title" id="coursetitle">
-    <input type="number" placeholder="Course Price" id="price">
-    <button type="submit">SUBMIT</button>
-    <select name="" id="">
-      <option value="asd">asdasd</option>
-      <option value="asd">asdasd</option>
-      <option value="asd">asdasd</option>
-    </select>
-  </form>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>ProjectManager</title>
+    <link rel="stylesheet" href="app.css" />
+    <script src="dist/app.js" defer></script>
+  </head>
+  <body>
+    <template id="project-input">
+      <form>
+        <div class="form-control">
+          <label for="title">Title</label>
+          <input type="text" id="title" />
+        </div>
+        <div class="form-control">
+          <label for="description">Description</label>
+          <textarea id="description" rows="3"></textarea>
+        </div>
+        <div class="form-control">
+          <label for="people">People</label>
+          <input type="number" id="people" step="1" min="0" max="10" />
+        </div>
+        <button type="submit">ADD PROJECT</button>
+      </form>
+    </template>
+    <template id="single-project">
+      <li></li>
+    </template>
+    <template id="project-list">
+      <section class="projects">
+        <header>
+          <h2></h2>
+        </header>
+        <ul></ul>
+      </section>
+    </template>
+    <div id="app"></div>
+  </body>
 </html>
